[gd_scene load_steps=4 format=3 uid="uid://cj1rhnw33j2rn"]

[ext_resource type="Script" path="res://Menus/audio_menu.gd" id="1_2gwra"]
[ext_resource type="Theme" uid="uid://c3ixxsgbmwfdc" path="res://Themes/default_theme.tres" id="1_bwjdg"]
[ext_resource type="AudioStream" uid="uid://cwwe41rpp6ykp" path="res://Audio/music/Fight On.wav" id="3_3l13t"]

[node name="AudioMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_2gwra")
back_scene_path = "res://Menus/main_menu.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -90.0
offset_right = 73.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_layout_mode = 1

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
offset_top = 17.0
offset_right = 146.0
offset_bottom = 34.0
theme = ExtResource("1_bwjdg")
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
offset_top = 38.0
offset_right = 146.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.1
value = 1.0
metadata/_edit_layout_mode = 1

[node name="AmbienceLabel" type="Label" parent="VBoxContainer"]
offset_top = 58.0
offset_right = 146.0
offset_bottom = 75.0
theme = ExtResource("1_bwjdg")
text = "Ambience"

[node name="AmbienceSlider" type="HSlider" parent="VBoxContainer"]
offset_top = 79.0
offset_right = 146.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.1
value = 1.0
metadata/_edit_layout_mode = 1

[node name="FXLabel" type="Label" parent="VBoxContainer"]
offset_top = 99.0
offset_right = 146.0
offset_bottom = 116.0
theme = ExtResource("1_bwjdg")
text = "FX
"

[node name="FXSlider" type="HSlider" parent="VBoxContainer"]
offset_top = 120.0
offset_right = 146.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.1
value = 1.0
metadata/_edit_layout_mode = 1

[node name="BackButton" type="Button" parent="VBoxContainer"]
offset_top = 140.0
offset_right = 146.0
offset_bottom = 162.0
theme = ExtResource("1_bwjdg")
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3l13t")
autoplay = true
bus = &"Music"

[connection signal="value_changed" from="VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/AmbienceSlider" to="." method="_on_ambience_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/FXSlider" to="." method="_on_fx_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
